# nvd-api

./: .env.example  .gitignore  example-response.json  pyproject.toml
docs/: index.md
src/: __init__.py  __main__.py  bom_analyzer.py  nvd_provider.py
src/nvd/: __init__.py  api_provider.py  cpe_name_exception.py
src/types/: __init__.py  bom.py  component.py  dependency.py  report.py  vulnerability.py
test/: test_bom_analyzer.py  test_nvd_provider.py  test_report.py
test/nvd/: test_api_provider.py
